@@ -163,3 +163,4 @@ shady-skin Revision History
 2015-05-24
 
 - Some more improvements for plex-template (III)
+- Fixed height of plex-header 
